--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
+aiohttp==3.8.4
+async-timeout==4.0.2
 attrs==21.2.0
-certifi==2021.5.30
+certifi==2022.12.7
 chardet==4.0.0
 charset-normalizer==2.0.4
 idna==3.2
@@ -9,7 +9,7 @@ msgpack==1.0.2
 multidict==5.1.0
 Naked==0.1.31
 pycryptodome==3.10.1
-pyeasee==0.7.37
+pyeasee==0.7.50
 PyYAML==5.4.1
 requests==2.26.0
 shellescape==3.8.1
