--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pyeasee==0.7.50
 PyYAML==5.4.1
 requests==2.26.0
 shellescape==3.8.1
-signalrcore==0.8.8
+signalrcore==0.*
 six==1.16.0
 typing-extensions==3.10.0.2
 urllib3==1.26.6
