--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,4 @@ typing-extensions==3.10.0.2
 urllib3==1.26.6
 websocket-client==0.54.0
 yarl==1.6.3
-python-telegram-bot==13.7
+python-telegram-bot==20.*
