--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.10.2
 async-timeout==4.0.2
-attrs==21.2.0
+attrs==24.2.0
 certifi==2024.7.4
 chardet==4.0.0
 charset-normalizer==2.0.4
@@ -19,4 +19,4 @@ typing-extensions==3.10.0.2
 urllib3==1.26.19
 websocket-client==1.0.0
 yarl==1.13.1
-python-telegram-bot==20.*
+python-telegram-bot[job-queue]==21.6
